src/flake8_print/snapshots/ruff__flake8_print__tests__T201_T201.py.snap
---
source: src/flake8_print/mod.rs
expression: checks
---
- kind: PrintFound
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 22
  fix:
    patch:
      content: ""
      location:
        row: 1
        column: 0
      end_location:
        row: 2
        column: 0

